--- a/src/pages/case.astro
+++ b/src/pages/case.astro
@@ -1,6 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import CTAButton from '../components/CTAButton.astro';
+import OptimizedImage from '../components/OptimizedImage.astro';
+import SchemaOrg from '../components/SchemaOrg.astro';
 
 // Faktiske case data - kun de to prosjektene vi har
 const cases = [
@@ -125,7 +127,7 @@ const categories = ['Alle', 'Nettside med booking', 'Lead-generering'];
                       </span>
                     )}
                   </div>
-                  <img
+                  <OptimizedImage
                     src={`/images/cases/case_${index + 1}_logo.${index === 0 ? 'jpg' : 'jpeg'}`}
                     alt={`${caseItem.client} logo`}
                     class="h-10 w-auto object-contain opacity-80"
