--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -307,9 +307,9 @@ import SchemaOrg from '../components/SchemaOrg.astro';
             <OptimizedImage
               src="/images/pakker/start.png"
               alt="Start Pakke - Nettup"
-              width={64}
-              height={64}
-              class="w-16 h-16 object-contain"
+              width={48}
+              height={48}
+              class="w-12 h-12 object-contain"
             />
           </div>
           
@@ -408,15 +408,12 @@ import SchemaOrg from '../components/SchemaOrg.astro';
           </div>
         </div>
 
-        <!-- Plus (Most Popular) -->
-        <div
-          class="bg-white rounded-lg shadow-md p-6 relative border-2 border-blue-500 hover:shadow-lg transition-shadow duration-200 flex flex-col"
-        >
-          <div class="absolute -top-4 left-1/2 transform -translate-x-1/2">
-            <span
-              class="bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium"
-              >Mest populær</span
-            >
+        <!-- Plus -->
+        <div class="bg-white rounded-lg shadow-md p-6 relative hover:shadow-lg transition-shadow duration-200 flex flex-col border-t-4 border-blue-500">
+          <div class="absolute -top-3 left-1/2 transform -translate-x-1/2">
+            <span class="bg-blue-500 text-white px-3 py-1 rounded-full text-xs font-medium">
+              Mest populær
+            </span>
           </div>
           
           <!-- Package Image -->
@@ -424,9 +421,9 @@ import SchemaOrg from '../components/SchemaOrg.astro';
             <OptimizedImage
               src="/images/pakker/plus.png"
               alt="Plus Pakke - Nettup"
-              width={64}
-              height={64}
-              class="w-16 h-16 object-contain"
+              width={48}
+              height={48}
+              class="w-12 h-12 object-contain"
             />
           </div>
           
@@ -517,9 +514,9 @@ import SchemaOrg from '../components/SchemaOrg.astro';
             <OptimizedImage
               src="/images/pakker/pro.png"
               alt="Pro Pakke - Nettup"
-              width={64}
-              height={64}
-              class="w-16 h-16 object-contain"
+              width={48}
+              height={48}
+              class="w-12 h-12 object-contain"
             />
           </div>
           
@@ -627,9 +624,9 @@ import SchemaOrg from '../components/SchemaOrg.astro';
             <OptimizedImage
               src="/images/pakker/premium.png"
               alt="Premium Pakke - Nettup"
-              width={64}
-              height={64}
-              class="w-16 h-16 object-contain"
+              width={48}
+              height={48}
+              class="w-12 h-12 object-contain"
             />
           </div>
           
